--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "react-javascript",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "React TypeScript on Replit, using Vite bundler",
+  "name": "fitconnect-app",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.6.0",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.10.0",
+    "lucide-react": "^0.525.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "react-router-dom": "^7.6.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "vite": "^4.3.9"
   }
 }
